--- a/voting_app/public/index.html
+++ b/voting_app/public/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title>Project One</title>
+    <title>Project Onexxx</title>
     <link rel="stylesheet" href="./semantic-dist/semantic.css" />
     <link rel="stylesheet" href="./style.css" />
     <script src="vendor/babel-standalone.js"></script>
@@ -17,13 +17,13 @@
       <div id="content"></div>
     </div>
     <script src="./js/seed.js"></script>
-    <script src="./js/app.js"></script>
+    <script type="text/babel" data-plugin="transform-class-properties" src="./js/app.js"></script>
     <!-- Delete the script tag below to get started. -->
-    <script
+    <!-- <script
       type="text/babel"
       data-plugins="transform-class-properties"
       src="./js/app-complete.js"
-    ></script>
+    ></script> -->
   </body>
 
 </html>
